Fix width issues on small screens

--- a/application.css
+++ b/application.css
@@ -28,12 +28,13 @@ body #container h1 a {
   float: none;
   text-indent: 0;
   background: none;
+  box-sizing: border-box;
   font-size: 16px;
   text-decoration: none;
   color: #fff;
   padding: 8px;
   margin: 0;
-  height: 18px;
+  height: 33px;
   background-color: rgba(0, 0, 0, 0.37);
   width: 100%;
   font-family: 'crimsonRoman',"Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
@@ -72,8 +73,6 @@ body #container h1 a {
 /* Form Card */
 
 body #contentWrapper {
-  margin: 0;
-  width: 100%;
   padding: 0;
   border: none;
   box-shadow: none;
@@ -82,17 +81,18 @@ body #contentWrapper {
 body #container #mainContent {
   padding: 24px;
   border: none;
+  box-sizing: border-box;
   margin: 0 auto;
   width: 100%;
-  max-width: 1200px;
+  max-width: 600px;
   float: none;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
-.allowed-file-types, .show {
-  display: block;
-  max-width: 600px;
-  margin: 0 auto;
+@media screen and (max-width: 600px) {
+  body #container #mainContent {
+    width: 90%;
+  }
 }
 
 dd input {
@@ -124,4 +124,16 @@ input[type="submit"]:hover {
   background-color: #21412a;
   color: #fff;
   box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+}
+
+/* Sidebar */
+#side_bar {
+  float: right;
+  width: 100%;
+  padding: 10px 15px 15px 15px;
+  border: 1px solid #e1e1e1;
+  border-top: none;
+  background: #F2F2F2;
+  margin-right: 0;
+  box-sizing: border-box;
 }
